--- a/B2/lawB2.html
+++ b/B2/lawB2.html
@@ -1,118 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>B2 - Law</title>
-  <link rel="stylesheet" href="stylesB2.css">
-  <link rel="stylesheet" href="lawB2.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>B2 — Law (Recht) Flashcards</title>
+  <link rel="stylesheet" href="lawB2.css" />
 </head>
+
 <body>
-  <h1>B2 - Law Vocabulary</h1>
-  <div class="vocab-buttons">
-    <button class="vocab-btn">das Gesetz – law / act</button>
-    <button class="vocab-btn">die Verfassung – constitution</button>
-    <button class="vocab-btn">die Rechte – rights</button>
-    <button class="vocab-btn">die Pflichten – duties</button>
-    <button class="vocab-btn">der Richter – judge</button>
-    <button class="vocab-btn">der Anwalt – lawyer</button>
-    <button class="vocab-btn">das Gericht – court</button>
-    <button class="vocab-btn">das Urteil – verdict</button>
-    <button class="vocab-btn">die Strafe – penalty / punishment</button>
-    <button class="vocab-btn">die Gerechtigkeit – justice</button>
+  <header>
+    <h1>B2 — Recht (Law) Flashcards</h1>
+    <p class="subtitle">Hover or click a card to flip. Learn vocabulary and sentences about “Law”.</p>
+  </header>
 
-    <button class="vocab-btn">die Anklage – accusation / charge</button>
-    <button class="vocab-btn">der Angeklagte – defendant</button>
-    <button class="vocab-btn">die Verteidigung – defense</button>
-    <button class="vocab-btn">die Beweise – evidence</button>
-    <button class="vocab-btn">die Zeugenaussage – testimony</button>
-    <button class="vocab-btn">die Schuld – guilt</button>
-    <button class="vocab-btn">die Unschuld – innocence</button>
-    <button class="vocab-btn">die Berufung – appeal</button>
-    <button class="vocab-btn">die Vorschrift – regulation</button>
-    <button class="vocab-btn">die Verhandlung – trial / negotiation</button>
-    <button class="vocab-btn">das Gefängnis – prison</button>
-    <button class="vocab-btn">die Freiheitsstrafe – prison sentence</button>
-    <button class="vocab-btn">die Verantwortung – responsibility</button>
-    <button class="vocab-btn">die Pflichtverletzung – breach of duty</button>
-    <button class="vocab-btn">die Justiz – justice system</button>
-  </div>
+  <main class="card-area">
+    <section class="card-grid" aria-label="Law flashcards">
+      <div class="flash-card"><div class="inner"><div class="front">das Gesetz</div><div class="back">law / act</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Richter</div><div class="back">judge</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Anwalt</div><div class="back">lawyer</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Gericht</div><div class="back">court</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Polizei</div><div class="back">police</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Strafe</div><div class="back">punishment / fine</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Verbrechen</div><div class="back">crime</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Gerechtigkeit</div><div class="back">justice</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Zeuge</div><div class="back">witness</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Aussage</div><div class="back">testimony</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Verhandlung</div><div class="back">trial / hearing</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Urteil</div><div class="back">verdict</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Klage</div><div class="back">lawsuit</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Angeklagte</div><div class="back">defendant</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Staatsanwalt</div><div class="back">prosecutor</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Haft</div><div class="back">custody / detention</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Recht</div><div class="back">right / law</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Pflicht</div><div class="back">duty / obligation</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Freiheit</div><div class="back">freedom</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Eigentum</div><div class="back">property</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Zustimmung</div><div class="back">consent</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Vertrag</div><div class="back">contract</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Verantwortung</div><div class="back">responsibility</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Beweislage</div><div class="back">evidence</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Genehmigung</div><div class="back">authorization / permit</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Sicherheit</div><div class="back">security / safety</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Zeugenstand</div><div class="back">witness stand</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Berufung</div><div class="back">appeal</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Gerichtshof</div><div class="back">court of justice</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Menschenrechte</div><div class="back">human rights</div></div></div>
+    </section>
 
-  <h3>B2 - Law Sentences</h3>
-  <div class="sentence-list">
+    <section class="sentences">
+      <h2>30 Example Sentences (Using Vocabulary)</h2>
+      <div class="sentence-grid">
+        <div class="sentence-card"><strong>1.</strong> Das <b>Gesetz</b> schützt die Bürger. <span>The law protects citizens.</span></div>
+        <div class="sentence-card"><strong>2.</strong> Der <b>Richter</b> hat das <b>Urteil</b> verkündet. <span>The judge announced the verdict.</span></div>
+        <div class="sentence-card"><strong>3.</strong> Der <b>Anwalt</b> verteidigte seinen Mandanten. <span>The lawyer defended his client.</span></div>
+        <div class="sentence-card"><strong>4.</strong> Das <b>Gericht</b> tagte den ganzen Tag. <span>The court sat all day.</span></div>
+        <div class="sentence-card"><strong>5.</strong> Die <b>Polizei</b> hat den <b>Angeklagten</b> festgenommen. <span>The police arrested the defendant.</span></div>
+        <div class="sentence-card"><strong>6.</strong> Das <b>Verbrechen</b> war gut geplant. <span>The crime was well planned.</span></div>
+        <div class="sentence-card"><strong>7.</strong> <b>Gerechtigkeit</b> ist für alle wichtig. <span>Justice is important for everyone.</span></div>
+        <div class="sentence-card"><strong>8.</strong> Der <b>Zeuge</b> hat eine klare <b>Aussage</b> gemacht. <span>The witness gave a clear testimony.</span></div>
+        <div class="sentence-card"><strong>9.</strong> Die <b>Verhandlung</b> dauerte drei Stunden. <span>The trial lasted three hours.</span></div>
+        <div class="sentence-card"><strong>10.</strong> Die <b>Klage</b> wurde vom Anwalt eingereicht. <span>The lawsuit was filed by the lawyer.</span></div>
+        <div class="sentence-card"><strong>11.</strong> Der <b>Staatsanwalt</b> forderte eine harte <b>Strafe</b>. <span>The prosecutor demanded a severe punishment.</span></div>
+        <div class="sentence-card"><strong>12.</strong> Er befindet sich in <b>Haft</b>. <span>He is in custody.</span></div>
+        <div class="sentence-card"><strong>13.</strong> Jeder Mensch hat <b>Rechte</b> und <b>Pflichten</b>. <span>Everyone has rights and duties.</span></div>
+        <div class="sentence-card"><strong>14.</strong> Die <b>Freiheit</b> ist ein Grundrecht. <span>Freedom is a fundamental right.</span></div>
+        <div class="sentence-card"><strong>15.</strong> Das <b>Eigentum</b> ist geschützt. <span>Property is protected.</span></div>
+        <div class="sentence-card"><strong>16.</strong> Ohne <b>Zustimmung</b> darf man das nicht tun. <span>You can’t do that without consent.</span></div>
+        <div class="sentence-card"><strong>17.</strong> Der <b>Vertrag</b> ist rechtsgültig. <span>The contract is legally binding.</span></div>
+        <div class="sentence-card"><strong>18.</strong> Die <b>Beweislage</b> war eindeutig. <span>The evidence was clear.</span></div>
+        <div class="sentence-card"><strong>19.</strong> Der <b>Zeugenstand</b> war voll. <span>The witness stand was full.</span></div>
+        <div class="sentence-card"><strong>20.</strong> Das <b>Gericht</b> hat die <b>Berufung</b> akzeptiert. <span>The court accepted the appeal.</span></div>
+        <div class="sentence-card"><strong>21.</strong> Er übernahm die <b>Verantwortung</b> für seine Tat. <span>He took responsibility for his act.</span></div>
+        <div class="sentence-card"><strong>22.</strong> Eine <b>Genehmigung</b> ist erforderlich. <span>An authorization is required.</span></div>
+        <div class="sentence-card"><strong>23.</strong> <b>Sicherheit</b> ist oberstes Ziel. <span>Security is the top priority.</span></div>
+        <div class="sentence-card"><strong>24.</strong> Der <b>Gerichtshof</b> schützt die <b>Menschenrechte</b>. <span>The court protects human rights.</span></div>
+        <div class="sentence-card"><strong>25.</strong> Die <b>Pflicht</b> des Richters ist Fairness. <span>The judge’s duty is fairness.</span></div>
+        <div class="sentence-card"><strong>26.</strong> Die <b>Polizei</b> sammelt <b>Beweise</b>. <span>The police collect evidence.</span></div>
+        <div class="sentence-card"><strong>27.</strong> Die <b>Verhandlung</b> war öffentlich. <span>The hearing was public.</span></div>
+        <div class="sentence-card"><strong>28.</strong> Das <b>Urteil</b> war gerecht. <span>The verdict was fair.</span></div>
+        <div class="sentence-card"><strong>29.</strong> <b>Gerechtigkeit</b> verlangt Gleichheit. <span>Justice requires equality.</span></div>
+        <div class="sentence-card"><strong>30.</strong> <b>Menschenrechte</b> gelten überall. <span>Human rights apply everywhere.</span></div>
+      </div>
+    </section>
 
-    <div class="sentence-card">Jeder Bürger hat Rechte und Pflichten.  
-      <br><span>Every citizen has rights and duties.</span></div>
+    <section class="story">
+      <h2>Short Story — “Im Gerichtssaal”</h2>
+      <article>
+        <p>Ein junger Mann steht vor dem <strong>Gericht</strong>, weil er ein <strong>Gesetz</strong> gebrochen hat. Sein <strong>Anwalt</strong> verteidigt ihn leidenschaftlich, während der <strong>Staatsanwalt</strong> harte <strong>Strafen</strong> fordert.</p>
+        <p>Die <strong>Zeugen</strong> erzählen ihre <strong>Aussagen</strong>, und der <strong>Richter</strong> hört aufmerksam zu. Nach langer <strong>Verhandlung</strong> fällt das <strong>Urteil</strong>.</p>
+        <p>Am Ende erkennt der junge Mann seine <strong>Verantwortung</strong> und verspricht, das <strong>Gesetz</strong> künftig zu respektieren. Der <strong>Richter</strong> schenkt ihm eine zweite Chance — im Namen der <strong>Gerechtigkeit</strong>.</p>
+      </article>
+    </section>
+  </main>
 
-    <div class="sentence-card">Das Gesetz schützt die Freiheit der Menschen.  
-      <br><span>The law protects people’s freedom.</span></div>
-
-    <div class="sentence-card">Die Verfassung ist die Grundlage des Staates.  
-      <br><span>The constitution is the foundation of the state.</span></div>
-
-    <div class="sentence-card">Der Richter spricht heute das Urteil.  
-      <br><span>The judge delivers the verdict today.</span></div>
-
-    <div class="sentence-card">Mein Anwalt vertritt mich vor Gericht.  
-      <br><span>My lawyer represents me in court.</span></div>
-
-    <div class="sentence-card">Wer Regeln bricht, muss mit einer Strafe rechnen.  
-      <br><span>Those who break rules must expect a penalty.</span></div>
-
-    <div class="sentence-card">Gerechtigkeit ist ein wichtiges Prinzip in einer Demokratie.  
-      <br><span>Justice is an important principle in a democracy.</span></div>
-
-    <div class="sentence-card">Die Polizei sorgt für Sicherheit und Ordnung.  
-      <br><span>The police ensure safety and order.</span></div>
-
-    <div class="sentence-card">Die Menschenrechte sind universell und unveräußerlich.  
-      <br><span>Human rights are universal and inalienable.</span></div>
-
-    <div class="sentence-card">Das Gericht hat eine schwierige Entscheidung getroffen.  
-      <br><span>The court has made a difficult decision.</span></div>
-
-    <div class="sentence-card">Die Anklage gegen den Politiker war sehr schwerwiegend.  
-      <br><span>The charge against the politician was very serious.</span></div>
-
-    <div class="sentence-card">Der Angeklagte beteuerte seine Unschuld vor Gericht.  
-      <br><span>The defendant insisted on his innocence in court.</span></div>
-
-    <div class="sentence-card">Die Verteidigung präsentierte überzeugende Argumente.  
-      <br><span>The defense presented convincing arguments.</span></div>
-
-    <div class="sentence-card">Ohne Beweise kann kein Urteil gesprochen werden.  
-      <br><span>Without evidence, no verdict can be made.</span></div>
-
-    <div class="sentence-card">Die Zeugenaussage war entscheidend für den Prozess.  
-      <br><span>The testimony was crucial for the trial.</span></div>
-
-    <div class="sentence-card">Die Jury befand den Angeklagten für schuldig.  
-      <br><span>The jury found the defendant guilty.</span></div>
-
-    <div class="sentence-card">Seine Unschuld konnte schließlich bewiesen werden.  
-      <br><span>His innocence could finally be proven.</span></div>
-
-    <div class="sentence-card">Die Berufung wurde vom höheren Gericht zugelassen.  
-      <br><span>The appeal was accepted by the higher court.</span></div>
-
-    <div class="sentence-card">Jede Vorschrift muss genau beachtet werden.  
-      <br><span>Every regulation must be strictly observed.</span></div>
-
-    <div class="sentence-card">Die Verhandlung dauerte mehrere Wochen.  
-      <br><span>The trial lasted several weeks.</span></div>
-
-    <div class="sentence-card">Er wurde zu fünf Jahren Gefängnis verurteilt.  
-      <br><span>He was sentenced to five years in prison.</span></div>
-
-    <div class="sentence-card">Die Freiheitsstrafe war länger als erwartet.  
-      <br><span>The prison sentence was longer than expected.</span></div>
-
-    <div class="sentence-card">Jeder trägt Verantwortung für seine Handlungen.  
-      <br><span>Everyone bears responsibility for their actions.</span></div>
-
-
-    <div class="sentence-card">Die Justiz muss unabhängig und fair sein.  
-      <br><span>The justice system must be independent and fair.</span></div>
-
-  </div>
+  <script>
+    document.querySelectorAll('.flash-card').forEach(card => {
+      const inner = card.querySelector('.inner');
+      card.addEventListener('click', () => inner.classList.toggle('flipped'));
+      card.addEventListener('keydown', e => {
+        if (e.key === 'Enter' || e.key === ' ') {
+          e.preventDefault();
+          inner.classList.toggle('flipped');
+        }
+      });
+    });
+  </script>
 </body>
 </html>
