--- a/B2/publicSpeakingB2.html
+++ b/B2/publicSpeakingB2.html
@@ -1,121 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>B2 - Public Speaking</title>
-  <link rel="stylesheet" href="stylesB2.css">
-  <link rel="stylesheet" href="publicSpeakingB2.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>B2 — Public Speaking (Öffentliches Sprechen) Flashcards</title>
+  <link rel="stylesheet" href="publicSpeakingB2.css" />
 </head>
+
 <body>
-  <h1>B2 - Public Speaking Vocabulary</h1>
-  <div class="vocab-buttons">
-   
-    <button class="vocab-btn">die Rede – speech</button>
-    <button class="vocab-btn">der Vortrag – presentation / lecture</button>
-    <button class="vocab-btn">das Publikum – audience</button>
-    <button class="vocab-btn">die Körpersprache – body language</button>
-    <button class="vocab-btn">die Stimme – voice</button>
-    <button class="vocab-btn">die Betonung – emphasis / stress</button>
-    <button class="vocab-btn">das Lampenfieber – stage fright</button>
-    <button class="vocab-btn">die Rhetorik – rhetoric</button>
-    <button class="vocab-btn">die Überzeugungskraft – power of persuasion</button>
-    <button class="vocab-btn">die Präsentation – presentation</button>
+  <header>
+    <h1>B2 — Öffentliches Sprechen (Public Speaking) Flashcards</h1>
+    <p class="subtitle">Hover or click a card to flip. Learn vocabulary and sentences about “Public Speaking”.</p>
+  </header>
 
-  
-    <button class="vocab-btn">die Gestik – gestures</button>
-    <button class="vocab-btn">die Mimik – facial expression</button>
-    <button class="vocab-btn">der Tonfall – tone of voice</button>
-    <button class="vocab-btn">die Argumentation – argumentation</button>
-    <button class="vocab-btn">die Klarheit – clarity</button>
-    <button class="vocab-btn">die Struktur – structure</button>
-    <button class="vocab-btn">die Einleitung – introduction</button>
-    <button class="vocab-btn">der Schluss – conclusion</button>
-    <button class="vocab-btn">die Aufmerksamkeit – attention</button>
-    <button class="vocab-btn">die Glaubwürdigkeit – credibility</button>
-    <button class="vocab-btn">die Vorbereitung – preparation</button>
-    <button class="vocab-btn">die Improvisation – improvisation</button>
-    <button class="vocab-btn">das Selbstbewusstsein – self-confidence</button>
-    <button class="vocab-btn">die Nervosität – nervousness</button>
-    <button class="vocab-btn">die Diskussion – discussion</button>
-  </div>
+  <main class="card-area">
+    <section class="card-grid" aria-label="Public Speaking flashcards">
+      <div class="flash-card"><div class="inner"><div class="front">die Rede</div><div class="back">speech</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Redner</div><div class="back">speaker</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Publikum</div><div class="back">audience</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Stimme</div><div class="back">voice</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Körpersprache</div><div class="back">body language</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Präsentation</div><div class="back">presentation</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Mikrofon</div><div class="back">microphone</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Nervosität</div><div class="back">nervousness</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Vorbereitung</div><div class="back">preparation</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Applaus</div><div class="back">applause</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Bühne</div><div class="back">stage</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Rhetorik</div><div class="back">rhetoric</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Thema</div><div class="back">topic</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Blickkontakt</div><div class="back">eye contact</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Haltung</div><div class="back">posture</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Vertrauen</div><div class="back">confidence / trust</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Ausdruck</div><div class="back">expression</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Betonung</div><div class="back">emphasis</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Pause</div><div class="back">pause</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Überzeugung</div><div class="back">conviction / persuasion</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Lampenfieber</div><div class="back">stage fright</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Präsentationsfolie</div><div class="back">presentation slide</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Vortrag</div><div class="back">lecture / talk</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Gestik</div><div class="back">gesture</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Mimik</div><div class="back">facial expression</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Stimme erheben</div><div class="back">to raise one’s voice</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Aufmerksamkeit</div><div class="back">attention</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Feedback</div><div class="back">feedback</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Überzeugungskraft</div><div class="back">persuasive power</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Redezeit</div><div class="back">speaking time</div></div></div>
+    </section>
 
-  <h3>B2 - Public Speaking Sentences</h3>
-  <div class="sentence-list">
-    
-    <div class="sentence-card">Er hält heute eine Rede vor dem Parlament.  
-      <br><span>He is giving a speech in front of parliament today.</span></div>
+    <section class="sentences">
+      <h2>30 Example Sentences (Using Vocabulary)</h2>
+      <div class="sentence-grid">
+        <div class="sentence-card"><strong>1.</strong> Seine <b>Rede</b> war sehr inspirierend. <span>His speech was very inspiring.</span></div>
+        <div class="sentence-card"><strong>2.</strong> Der <b>Redner</b> stand auf der <b>Bühne</b>. <span>The speaker stood on the stage.</span></div>
+        <div class="sentence-card"><strong>3.</strong> Das <b>Publikum</b> hörte aufmerksam zu. <span>The audience listened carefully.</span></div>
+        <div class="sentence-card"><strong>4.</strong> Eine klare <b>Stimme</b> ist wichtig. <span>A clear voice is important.</span></div>
+        <div class="sentence-card"><strong>5.</strong> <b>Körpersprache</b> sagt oft mehr als Worte. <span>Body language often says more than words.</span></div>
+        <div class="sentence-card"><strong>6.</strong> Ich habe eine <b>Präsentation</b> vorbereitet. <span>I prepared a presentation.</span></div>
+        <div class="sentence-card"><strong>7.</strong> Das <b>Mikrofon</b> funktioniert nicht. <span>The microphone doesn’t work.</span></div>
+        <div class="sentence-card"><strong>8.</strong> Meine <b>Nervosität</b> verschwand nach dem Applaus. <span>My nervousness disappeared after the applause.</span></div>
+        <div class="sentence-card"><strong>9.</strong> Gute <b>Vorbereitung</b> ist der Schlüssel. <span>Good preparation is key.</span></div>
+        <div class="sentence-card"><strong>10.</strong> Der <b>Applaus</b> war laut und herzlich. <span>The applause was loud and warm.</span></div>
+        <div class="sentence-card"><strong>11.</strong> Seine <b>Rhetorik</b> war beeindruckend. <span>His rhetoric was impressive.</span></div>
+        <div class="sentence-card"><strong>12.</strong> Er hielt den <b>Blickkontakt</b> mit dem Publikum. <span>He kept eye contact with the audience.</span></div>
+        <div class="sentence-card"><strong>13.</strong> Eine gute <b>Haltung</b> zeigt Selbstvertrauen. <span>Good posture shows confidence.</span></div>
+        <div class="sentence-card"><strong>14.</strong> Der <b>Ausdruck</b> seiner Worte war stark. <span>The expression of his words was strong.</span></div>
+        <div class="sentence-card"><strong>15.</strong> Die <b>Betonung</b> macht den Satz lebendig. <span>Emphasis makes the sentence lively.</span></div>
+        <div class="sentence-card"><strong>16.</strong> Kurze <b>Pausen</b> geben dem Publikum Zeit. <span>Short pauses give the audience time.</span></div>
+        <div class="sentence-card"><strong>17.</strong> Sie sprach mit großer <b>Überzeugung</b>. <span>She spoke with great conviction.</span></div>
+        <div class="sentence-card"><strong>18.</strong> Ich hatte starkes <b>Lampenfieber</b>. <span>I had strong stage fright.</span></div>
+        <div class="sentence-card"><strong>19.</strong> Die <b>Gestik</b> unterstreicht die Worte. <span>Gestures emphasize the words.</span></div>
+        <div class="sentence-card"><strong>20.</strong> Seine <b>Mimik</b> war freundlich. <span>His facial expression was friendly.</span></div>
+        <div class="sentence-card"><strong>21.</strong> Er erhielt positives <b>Feedback</b>. <span>He received positive feedback.</span></div>
+        <div class="sentence-card"><strong>22.</strong> Die <b>Aufmerksamkeit</b> war groß. <span>The attention was high.</span></div>
+        <div class="sentence-card"><strong>23.</strong> Gute <b>Rhetorik</b> kann überzeugen. <span>Good rhetoric can persuade.</span></div>
+        <div class="sentence-card"><strong>24.</strong> Er nutzte seine <b>Redezeit</b> effektiv. <span>He used his speaking time effectively.</span></div>
+        <div class="sentence-card"><strong>25.</strong> Ihre <b>Überzeugungskraft</b> war beeindruckend. <span>Her persuasive power was impressive.</span></div>
+        <div class="sentence-card"><strong>26.</strong> Der <b>Vortrag</b> dauerte zwanzig Minuten. <span>The lecture lasted twenty minutes.</span></div>
+        <div class="sentence-card"><strong>27.</strong> <b>Vertrauen</b> in sich selbst ist entscheidend. <span>Confidence in yourself is crucial.</span></div>
+        <div class="sentence-card"><strong>28.</strong> Die <b>Präsentationsfolien</b> waren klar und schön. <span>The slides were clear and beautiful.</span></div>
+        <div class="sentence-card"><strong>29.</strong> Sie <b>erhob ihre Stimme</b> mit Leidenschaft. <span>She raised her voice with passion.</span></div>
+        <div class="sentence-card"><strong>30.</strong> Das <b>Thema</b> war spannend. <span>The topic was exciting.</span></div>
+      </div>
+    </section>
 
-    <div class="sentence-card">Ihr Vortrag war sehr informativ und spannend.  
-      <br><span>Her presentation was very informative and exciting.</span></div>
+    <section class="story">
+      <h2>Short Story — “Meine erste Rede”</h2>
+      <article>
+        <p>Ich stand nervös auf der <strong>Bühne</strong>. Mein Herz schlug schnell, das <strong>Lampenfieber</strong> war stark. Doch dann sah ich das <strong>Publikum</strong> lächeln.</p>
+        <p>Ich begann meine <strong>Rede</strong> ruhig, mit klarer <strong>Stimme</strong> und fester <strong>Haltung</strong>. Meine <strong>Gestik</strong> und <strong>Blickkontakt</strong> halfen mir, Vertrauen zu zeigen.</p>
+        <p>Am Ende bekam ich großen <strong>Applaus</strong>. Ich fühlte <strong>Überzeugung</strong> und Stolz – ich hatte meine Angst besiegt.</p>
+      </article>
+    </section>
+  </main>
 
-    <div class="sentence-card">Das Publikum hörte aufmerksam zu.  
-      <br><span>The audience listened attentively.</span></div>
-
-    <div class="sentence-card">Körpersprache ist wichtig, um überzeugend zu wirken.  
-      <br><span>Body language is important to appear convincing.</span></div>
-
-    <div class="sentence-card">Die Stimme sollte klar und deutlich sein.  
-      <br><span>The voice should be clear and distinct.</span></div>
-
-    <div class="sentence-card">Die richtige Betonung macht eine Rede lebendiger.  
-      <br><span>The right emphasis makes a speech more lively.</span></div>
-
-    <div class="sentence-card">Viele Menschen haben Lampenfieber vor dem Auftritt.  
-      <br><span>Many people have stage fright before performing.</span></div>
-
-    <div class="sentence-card">Rhetorik ist eine Kunst, die man lernen kann.  
-      <br><span>Rhetoric is an art that can be learned.</span></div>
-
-    <div class="sentence-card">Ihre Überzeugungskraft beeindruckte das Publikum.  
-      <br><span>Her power of persuasion impressed the audience.</span></div>
-
-    <div class="sentence-card">Die Präsentation wurde mit Bildern unterstützt.  
-      <br><span>The presentation was supported with images.</span></div>
-
- 
-    <div class="sentence-card">Gestik hilft dabei, die Botschaft zu unterstreichen.  
-      <br><span>Gestures help to underline the message.</span></div>
-
-    <div class="sentence-card">Seine Mimik zeigte Nervosität.  
-      <br><span>His facial expression showed nervousness.</span></div>
-
-    <div class="sentence-card">Der Tonfall entscheidet oft über die Wirkung der Rede.  
-      <br><span>The tone of voice often determines the effect of the speech.</span></div>
-
-    <div class="sentence-card">Eine logische Argumentation ist wichtig für eine gute Rede.  
-      <br><span>A logical argumentation is important for a good speech.</span></div>
-
-    <div class="sentence-card">Klarheit ist entscheidend, um verstanden zu werden.  
-      <br><span>Clarity is essential to be understood.</span></div>
-
-    <div class="sentence-card">Eine klare Struktur erleichtert dem Publikum das Zuhören.  
-      <br><span>A clear structure makes it easier for the audience to follow.</span></div>
-
-    <div class="sentence-card">Die Einleitung muss Interesse wecken.  
-      <br><span>The introduction must arouse interest.</span></div>
-
-    <div class="sentence-card">Der Schluss einer Rede sollte stark und einprägsam sein.  
-      <br><span>The conclusion of a speech should be strong and memorable.</span></div>
-
-    <div class="sentence-card">Die Aufmerksamkeit des Publikums darf nicht verloren gehen.  
-      <br><span>The attention of the audience must not be lost.</span></div>
-
-    <div class="sentence-card">Glaubwürdigkeit macht den Sprecher vertrauenswürdig.  
-      <br><span>Credibility makes the speaker trustworthy.</span></div>
-
-    <div class="sentence-card">Gute Vorbereitung ist der Schlüssel zu einem erfolgreichen Vortrag.  
-      <br><span>Good preparation is the key to a successful presentation.</span></div>
-
-    <div class="sentence-card">Manchmal ist Improvisation während einer Rede notwendig.  
-      <br><span>Sometimes improvisation is necessary during a speech.</span></div>
-
-    <div class="sentence-card">Selbstbewusstsein hilft, souverän aufzutreten.  
-      <br><span>Self-confidence helps to appear confident.</span></div>
-
-    <div class="sentence-card">Nervosität kann durch Atemübungen reduziert werden.  
-      <br><span>Nervousness can be reduced through breathing exercises.</span></div>
-
-   
-  </div>
+  <script>
+    document.querySelectorAll('.flash-card').forEach(card => {
+      const inner = card.querySelector('.inner');
+      card.addEventListener('click', () => inner.classList.toggle('flipped'));
+      card.addEventListener('keydown', e => {
+        if (e.key === 'Enter' || e.key === ' ') {
+          e.preventDefault();
+          inner.classList.toggle('flipped');
+        }
+      });
+    });
+  </script>
 </body>
 </html>
