--- a/deutschio-chatbot.html
+++ b/deutschio-chatbot.html
@@ -18,7 +18,7 @@
         
         <div id="chatContainer" class="chat-container">
             <div class="message bot-message">
-                👋 Azul! <br> I'm DeutschioAI. How can I help you today?
+        Hello ! <br> I'm DeutschioAI. How can I help you today?
             </div>
         </div>
         
