--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
       <!-- Step 1: enter username -->
       <div id="step-name" class="step">
         <label class="label">Enter your name</label>
-        <input id="nameInput" class="input" placeholder="e.g. Anna" autocomplete="name" />
+        <input id="nameInput" class="input" placeholder="e.g. Khalid" autocomplete="name" />
         <div class="hint">Your name will be shown in your profile.</div>
         <div class="actions">
           <button id="nameContinue" class="btn primary">Continue</button>
