--- a/profile.html
+++ b/profile.html
@@ -49,10 +49,12 @@
 
   <!-- Typing Challenge -->
   <div id="typing-game" class="game-box">
-    <h3>⌨ Typing Challenge</h3>
+    <h3>Typing Challenge</h3>
     <p>Translate the German word before time runs out!</p>
     <div id="typing-word"></div>
     <input type="text" id="typing-input" placeholder="Type translation..." />
+    <br>
+    <br>
     <button onclick="startTypingGame()">Start Game</button>
     <p id="typing-score"></p>
   </div>
@@ -64,6 +66,7 @@
     <div id="hangman-word"></div>
     <div id="hangman-letters"></div>
     <p id="hangman-status"></p>
+    <br>
     <button onclick="startHangman()">New Game</button>
   </div>
 </div>
@@ -73,13 +76,13 @@
 
 <!-- Random Word of the Day -->
 <section class="word-of-day">
-  <h2>📖 Word of the Day</h2>
+  <h2> Word of the Day</h2>
   <div id="wordBox" class="word-box"></div>
 </section>
 
 
 <section class="drag-drop-game">
-  <h2>🧩 Match the Words</h2>
+  <h2> Match the Words</h2>
   <p>Drag the German word to its English meaning</p>
   <div class="game-container">
     <div class="words">
