--- a/A1/family.html
+++ b/A1/family.html
@@ -1,62 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>A1 Family</title>
-  <link rel="stylesheet" href="global.css">
-  <link rel="stylesheet" href="family.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>A1 — Family (Familie) Flashcards</title>
+  <link rel="stylesheet" href="family.css" />
 </head>
+
 <body>
-  <h1>A1 Family Vocabulary</h1>
-  <div class="vocab-buttons">
-    <button class="vocab-btn">die Mutter – mother</button>
-    <button class="vocab-btn">der Vater – father</button>
-    <button class="vocab-btn">die Eltern – parents</button>
-    <button class="vocab-btn">der Bruder – brother</button>
-    <button class="vocab-btn">die Schwester – sister</button>
-    <button class="vocab-btn">die Geschwister – siblings</button>
-    <button class="vocab-btn">die Oma – grandmother</button>
-    <button class="vocab-btn">der Opa – grandfather</button>
-    <button class="vocab-btn">die Großeltern – grandparents</button>
-    <button class="vocab-btn">der Onkel – uncle</button>
-    <button class="vocab-btn">die Tante – aunt</button>
-    <button class="vocab-btn">der Cousin – cousin (male)</button>
-    <button class="vocab-btn">die Cousine – cousin (female)</button>
-  </div>
+  <header>
+    <h1>A1 - Die Familie (Family) Flashcards</h1>
+    <br>
+    <p class="subtitle">Hover or click a card to flip. All vocab and sentences focus on "Family" (Familie).</p>
+  </header>
+<br>
+<br>
+  <main class="card-area">
+    <section class="card-grid" aria-label="Family flashcards">
 
-  <h3>A1 Family Sentences</h3>
-  <div class="sentence-list">
+      <!-- 30 flash-cards -->
+      <div class="flash-card"><div class="inner"><div class="front">die Familie</div><div class="back">family</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Mutter</div><div class="back">mother</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Vater</div><div class="back">father</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Bruder</div><div class="back">brother</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Schwester</div><div class="back">sister</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Eltern</div><div class="back">parents</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Großeltern</div><div class="back">grandparents</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Oma</div><div class="back">grandmother</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Opa</div><div class="back">grandfather</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Tante</div><div class="back">aunt</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Onkel</div><div class="back">uncle</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Cousin</div><div class="back">cousin (male)</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Cousine</div><div class="back">cousin (female)</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Kind</div><div class="back">child</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Kinder</div><div class="back">children</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Tochter</div><div class="back">daughter</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Sohn</div><div class="back">son</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Frau</div><div class="back">wife / woman</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Mann</div><div class="back">husband / man</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Ehe</div><div class="back">marriage</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Neffe</div><div class="back">nephew</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Nichte</div><div class="back">niece</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Schwiegermutter</div><div class="back">mother-in-law</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Schwiegervater</div><div class="back">father-in-law</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Schwägerin</div><div class="back">sister-in-law</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Schwager</div><div class="back">brother-in-law</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Enkel</div><div class="back">grandson</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Enkelin</div><div class="back">granddaughter</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Verwandten</div><div class="back">relatives</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Beziehung</div><div class="back">relationship</div></div></div>
 
-    <div class="sentence-card">Meine Mutter ist Lehrerin.  
-      <br><span>My mother is a teacher.</span></div>
+    </section>
+<br>
+<br>
+    <section class="sentences">
+      <h2>30 Example Sentences (Using Vocabulary)</h2>
+      <br>
+      <br>
+      <div class="sentence-grid">
+        <div class="sentence-card"><strong>1.</strong> Meine Familie ist groß. <span>My family is big.</span></div>
+        <div class="sentence-card"><strong>2.</strong> Meine Mutter kocht gern. <span>My mother likes to cook.</span></div>
+        <div class="sentence-card"><strong>3.</strong> Mein Vater liest jeden Abend. <span>My father reads every evening.</span></div>
+        <div class="sentence-card"><strong>4.</strong> Mein Bruder spielt Fußball. <span>My brother plays soccer.</span></div>
+        <div class="sentence-card"><strong>5.</strong> Meine Schwester hört Musik. <span>My sister listens to music.</span></div>
+        <div class="sentence-card"><strong>6.</strong> Meine Eltern sind freundlich. <span>My parents are friendly.</span></div>
+        <div class="sentence-card"><strong>7.</strong> Meine Großeltern wohnen in Berlin. <span>My grandparents live in Berlin.</span></div>
+        <div class="sentence-card"><strong>8.</strong> Meine Oma backt Kuchen. <span>My grandmother bakes cake.</span></div>
+        <div class="sentence-card"><strong>9.</strong> Mein Opa spielt Schach. <span>My grandfather plays chess.</span></div>
+        <div class="sentence-card"><strong>10.</strong> Meine Tante arbeitet im Krankenhaus. <span>My aunt works in the hospital.</span></div>
+        <div class="sentence-card"><strong>11.</strong> Mein Onkel fährt gern Auto. <span>My uncle likes driving cars.</span></div>
+        <div class="sentence-card"><strong>12.</strong> Mein Cousin studiert Medizin. <span>My male cousin studies medicine.</span></div>
+        <div class="sentence-card"><strong>13.</strong> Meine Cousine lernt Deutsch. <span>My female cousin learns German.</span></div>
+        <div class="sentence-card"><strong>14.</strong> Mein Kind geht in die Schule. <span>My child goes to school.</span></div>
+        <div class="sentence-card"><strong>15.</strong> Die Kinder spielen im Garten. <span>The children play in the garden.</span></div>
+        <div class="sentence-card"><strong>16.</strong> Meine Tochter malt gern. <span>My daughter likes painting.</span></div>
+        <div class="sentence-card"><strong>17.</strong> Mein Sohn liebt Musik. <span>My son loves music.</span></div>
+        <div class="sentence-card"><strong>18.</strong> Meine Frau ist Lehrerin. <span>My wife is a teacher.</span></div>
+        <div class="sentence-card"><strong>19.</strong> Mein Mann arbeitet im Büro. <span>My husband works in an office.</span></div>
+        <div class="sentence-card"><strong>20.</strong> Ihre Ehe ist glücklich. <span>Their marriage is happy.</span></div>
+        <div class="sentence-card"><strong>21.</strong> Mein Neffe ist drei Jahre alt. <span>My nephew is three years old.</span></div>
+        <div class="sentence-card"><strong>22.</strong> Meine Nichte lacht viel. <span>My niece laughs a lot.</span></div>
+        <div class="sentence-card"><strong>23.</strong> Meine Schwiegermutter ist nett. <span>My mother-in-law is nice.</span></div>
+        <div class="sentence-card"><strong>24.</strong> Mein Schwiegervater hilft im Garten. <span>My father-in-law helps in the garden.</span></div>
+        <div class="sentence-card"><strong>25.</strong> Meine Schwägerin wohnt in Hamburg. <span>My sister-in-law lives in Hamburg.</span></div>
+        <div class="sentence-card"><strong>26.</strong> Mein Schwager besucht uns oft. <span>My brother-in-law visits us often.</span></div>
+        <div class="sentence-card"><strong>27.</strong> Mein Enkel malt ein Bild. <span>My grandson paints a picture.</span></div>
+        <div class="sentence-card"><strong>28.</strong> Meine Enkelin singt ein Lied. <span>My granddaughter sings a song.</span></div>
+        <div class="sentence-card"><strong>29.</strong> Alle Verwandten kommen zu Besuch. <span>All relatives come to visit.</span></div>
+        <div class="sentence-card"><strong>30.</strong> Unsere Beziehung ist stark. <span>Our relationship is strong.</span></div>
+      </div>
+    </section>
+<br>
+<br>
+    <section class="story">
+      <h2>Short Story - "Meine Familie"</h2>
+      <br>
+      <br>
+      <article>
+        <p>Meine <strong>Familie</strong> ist groß. <strong>Meine Eltern</strong> wohnen mit mir in einem Haus.</p>
+        <p><strong>Mein Vater</strong> arbeitet viel, und <strong>meine Mutter</strong> kocht jeden Abend.</p>
+        <p><strong>Meine Schwester</strong> liebt Musik, und <strong>mein Bruder</strong> spielt Fußball.</p>
+        <p>Am Wochenende besuchen uns <strong>die Großeltern</strong>. <strong>Oma</strong> backt Kuchen und <strong>Opa</strong> erzählt Geschichten.</p>
+        <p>Auch <strong>die Tante</strong>, <strong>der Onkel</strong> und <strong>die Cousine</strong> kommen oft vorbei.</p>
+        <p>Unsere <strong>Familie</strong> lacht viel zusammen — <strong>unsere Beziehung</strong> ist stark und liebevoll.</p>
+      </article>
+    </section>
+  </main>
 
-    <div class="sentence-card">Mein Vater arbeitet im Büro.  
-      <br><span>My father works in an office.</span></div>
-
-    <div class="sentence-card">Ich habe einen Bruder und eine Schwester.  
-      <br><span>I have a brother and a sister.</span></div>
-
-    <div class="sentence-card">Meine Großeltern wohnen in Berlin.  
-      <br><span>My grandparents live in Berlin.</span></div>
-
-    <div class="sentence-card">Am Wochenende besuche ich meine Oma.  
-      <br><span>On the weekend I visit my grandmother.</span></div>
-
-    <div class="sentence-card">Mein Onkel ist sehr freundlich.  
-      <br><span>My uncle is very friendly.</span></div>
-
-    <div class="sentence-card">Meine Tante kocht sehr gut.  
-      <br><span>My aunt cooks very well.</span></div>
-
-    <div class="sentence-card">Meine Cousine studiert in München.  
-      <br><span>My (female) cousin studies in Munich.</span></div>
-
-    <div class="sentence-card">Mein Cousin spielt gern Fußball.  
-      <br><span>My (male) cousin likes to play football.</span></div>
-
-    <div class="sentence-card">Meine Eltern sind sehr nett.  
-      <br><span>My parents are very kind.</span></div>
-
-  </div>
+  <script>
+    document.querySelectorAll('.flash-card').forEach(card => {
+      const inner = card.querySelector('.inner');
+      card.addEventListener('click', () => inner.classList.toggle('flipped'));
+      card.addEventListener('keydown', e => {
+        if (e.key === 'Enter' || e.key === ' ') {
+          e.preventDefault();
+          inner.classList.toggle('flipped');
+        }
+      });
+    });
+  </script>
 </body>
 </html>
