--- a/A1/greetings.html
+++ b/A1/greetings.html
@@ -1,63 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>A1 Greetings</title>
-  <link rel="stylesheet" href="global.css">
-  <link rel="stylesheet" href="greetings.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>A1 — Greetings (Begrüßungen) Flashcards</title>
+  <link rel="stylesheet" href="greetings.css" />
 </head>
+
 <body>
-  <h1>A1 Greetings Vocabulary</h1>
-  <div class="vocab-buttons">
-    <button class="vocab-btn">Hallo – Hello</button>
-    <button class="vocab-btn">Hi – Hi</button>
-    <button class="vocab-btn">Guten Morgen – Good morning</button>
-    <button class="vocab-btn">Guten Tag – Good day</button>
-    <button class="vocab-btn">Guten Abend – Good evening</button>
-    <button class="vocab-btn">Gute Nacht – Good night</button>
-    <button class="vocab-btn">Tschüss – Bye</button>
-    <button class="vocab-btn">Auf Wiedersehen – Goodbye</button>
-    <button class="vocab-btn">Wie geht’s? – How are you?</button>
-    <button class="vocab-btn">Mir geht’s gut – I’m fine</button>
-  </div>
+  <header>
+    <h1>A1 - Die Begrüßungen (Greetings) Flashcards</h1>
+    <br>
+    <p class="subtitle">Hover or click a card to flip. All vocab and sentences focus on "Greetings" (Begrüßungen).</p>
+  </header>
+<br>
+<br>
+  <main class="card-area">
+    <section class="card-grid" aria-label="Greetings flashcards">
 
-  <h3>A1 Greetings Sentences</h3>
-  <div class="sentence-list">
+      <!-- 30 flash-cards -->
+      <div class="flash-card"><div class="inner"><div class="front">Hallo</div><div class="back">Hello</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Guten Morgen</div><div class="back">Good morning</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Guten Tag</div><div class="back">Good day</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Guten Abend</div><div class="back">Good evening</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Gute Nacht</div><div class="back">Good night</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Wie geht’s?</div><div class="back">How are you?</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Mir geht’s gut</div><div class="back">I’m fine</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Und dir?</div><div class="back">And you?</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Schön, dich zu sehen</div><div class="back">Nice to see you</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Willkommen</div><div class="back">Welcome</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Tschüss</div><div class="back">Bye</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Auf Wiedersehen</div><div class="back">Goodbye (formal)</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Bis bald</div><div class="back">See you soon</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Bis später</div><div class="back">See you later</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Bis morgen</div><div class="back">See you tomorrow</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Mach’s gut</div><div class="back">Take care</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Herzlichen Glückwunsch</div><div class="back">Congratulations</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Alles Gute</div><div class="back">All the best</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Frohe Weihnachten</div><div class="back">Merry Christmas</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Frohes neues Jahr</div><div class="back">Happy New Year</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Schönen Tag noch</div><div class="back">Have a nice day</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Willkommen zurück</div><div class="back">Welcome back</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Gute Reise</div><div class="back">Have a good trip</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Schönes Wochenende</div><div class="back">Have a nice weekend</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Gute Besserung</div><div class="back">Get well soon</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Viel Glück</div><div class="back">Good luck</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Prost!</div><div class="back">Cheers!</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Entschuldigung</div><div class="back">Excuse me / Sorry</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Danke</div><div class="back">Thank you</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">Bitte</div><div class="back">Please / You’re welcome</div></div></div>
 
-    <div class="sentence-card">Hallo, wie geht’s dir?  
-      <br><span>Hello, how are you?</span></div>
+    </section>
+<br>
+<br>
+    <section class="sentences">
+      <h2>30 Example Sentences (Using Vocabulary)</h2>
+      <br>
+      <br>
+      <div class="sentence-grid">
+        <div class="sentence-card"><strong>1.</strong> Hallo! Wie geht’s dir? <span>Hello! How are you?</span></div>
+        <div class="sentence-card"><strong>2.</strong> Guten Morgen, Frau Müller! <span>Good morning, Mrs. Müller!</span></div>
+        <div class="sentence-card"><strong>3.</strong> Guten Tag, mein Freund. <span>Good day, my friend.</span></div>
+        <div class="sentence-card"><strong>4.</strong> Guten Abend, Peter! <span>Good evening, Peter!</span></div>
+        <div class="sentence-card"><strong>5.</strong> Gute Nacht und süße Träume. <span>Good night and sweet dreams.</span></div>
+        <div class="sentence-card"><strong>6.</strong> Mir geht’s gut, danke. <span>I’m fine, thanks.</span></div>
+        <div class="sentence-card"><strong>7.</strong> Und dir, wie geht’s? <span>And you, how are you?</span></div>
+        <div class="sentence-card"><strong>8.</strong> Schön, dich wiederzusehen. <span>Nice to see you again.</span></div>
+        <div class="sentence-card"><strong>9.</strong> Willkommen in Berlin! <span>Welcome to Berlin!</span></div>
+        <div class="sentence-card"><strong>10.</strong> Tschüss, bis morgen! <span>Bye, see you tomorrow!</span></div>
+        <div class="sentence-card"><strong>11.</strong> Auf Wiedersehen, Herr Schmidt. <span>Goodbye, Mr. Schmidt.</span></div>
+        <div class="sentence-card"><strong>12.</strong> Bis bald, mein Freund. <span>See you soon, my friend.</span></div>
+        <div class="sentence-card"><strong>13.</strong> Bis später! Ich rufe dich an. <span>See you later! I’ll call you.</span></div>
+        <div class="sentence-card"><strong>14.</strong> Mach’s gut und bleib gesund. <span>Take care and stay healthy.</span></div>
+        <div class="sentence-card"><strong>15.</strong> Herzlichen Glückwunsch zum Geburtstag! <span>Happy birthday!</span></div>
+        <div class="sentence-card"><strong>16.</strong> Alles Gute zum neuen Job. <span>All the best for your new job.</span></div>
+        <div class="sentence-card"><strong>17.</strong> Frohe Weihnachten und ein gutes neues Jahr! <span>Merry Christmas and a Happy New Year!</span></div>
+        <div class="sentence-card"><strong>18.</strong> Schönen Tag noch! <span>Have a nice day!</span></div>
+        <div class="sentence-card"><strong>19.</strong> Gute Reise nach München. <span>Have a good trip to Munich.</span></div>
+        <div class="sentence-card"><strong>20.</strong> Schönes Wochenende! <span>Have a nice weekend!</span></div>
+        <div class="sentence-card"><strong>21.</strong> Gute Besserung, mein Freund! <span>Get well soon, my friend!</span></div>
+        <div class="sentence-card"><strong>22.</strong> Viel Glück bei der Prüfung! <span>Good luck on the exam!</span></div>
+        <div class="sentence-card"><strong>23.</strong> Prost! Auf deine Gesundheit! <span>Cheers! To your health!</span></div>
+        <div class="sentence-card"><strong>24.</strong> Entschuldigung, ich bin spät. <span>Sorry, I’m late.</span></div>
+        <div class="sentence-card"><strong>25.</strong> Danke für deine Hilfe. <span>Thank you for your help.</span></div>
+        <div class="sentence-card"><strong>26.</strong> Bitte schön! <span>You’re welcome!</span></div>
+        <div class="sentence-card"><strong>27.</strong> Willkommen zurück aus dem Urlaub! <span>Welcome back from vacation!</span></div>
+        <div class="sentence-card"><strong>28.</strong> Guten Morgen zusammen! <span>Good morning everyone!</span></div>
+        <div class="sentence-card"><strong>29.</strong> Bis bald in der Schule! <span>See you soon at school!</span></div>
+        <div class="sentence-card"><strong>30.</strong> Mach’s gut, meine Freundin. <span>Take care, my friend.</span></div>
+      </div>
+    </section>
+<br>
+<br>
+    <section class="story">
+      <h2>Short Story - "Begrüßungen im Alltag"</h2>
+      <br>
+      <br>
+      <article>
+        <p>Am Morgen sage ich: <strong>Guten Morgen!</strong> zu meiner Familie.</p>
+        <p>In der Arbeit begrüße ich meine Kollegen mit <strong>Guten Tag!</strong></p>
+        <p>Nach der Arbeit treffe ich Freunde und sage <strong>Hallo!</strong> oder <strong>Wie geht’s?</strong></p>
+        <p>Am Abend verabschiede ich mich mit <strong>Guten Abend</strong> oder <strong>Tschüss!</strong></p>
+        <p>Bevor ich schlafen gehe, sage ich zu meiner Mutter: <strong>Gute Nacht!</strong></p>
+        <p>Am Wochenende wünsche ich allen ein <strong>schönes Wochenende</strong> und <strong>Alles Gute!</strong></p>
+      </article>
+    </section>
+  </main>
 
-    <div class="sentence-card">Guten Morgen, Frau Müller.  
-      <br><span>Good morning, Mrs. Müller.</span></div>
-
-    <div class="sentence-card">Guten Tag, ich heiße Anna.  
-      <br><span>Good day, my name is Anna.</span></div>
-
-    <div class="sentence-card">Guten Abend, Herr Schmidt.  
-      <br><span>Good evening, Mr. Schmidt.</span></div>
-
-    <div class="sentence-card">Gute Nacht, bis morgen.  
-      <br><span>Good night, see you tomorrow.</span></div>
-
-    <div class="sentence-card">Tschüss, bis später!  
-      <br><span>Bye, see you later!</span></div>
-
-    <div class="sentence-card">Auf Wiedersehen, Herr Lehrer.  
-      <br><span>Goodbye, Mr. Teacher.</span></div>
-
-    <div class="sentence-card">Mir geht’s gut, danke.  
-      <br><span>I’m fine, thank you.</span></div>
-
-    <div class="sentence-card">Wie geht es Ihnen?  
-      <br><span>How are you? (formal)</span></div>
-
-    <div class="sentence-card">Schön, dich zu sehen!  
-      <br><span>Nice to see you!</span></div>
-
-  </div>
-
-
-</body>
-</html>
+  <script>
+    document.querySelectorAll('.flash-card').forEach(card => {
+      const inner = card.querySelector('.inner');
+      card.addEventListener('click', () => inner.classList.toggle('flipped'));
+      card.addEventListener('keydown', e => {
+        if (e.key === 'Enter' || e.key === ' ') {
+          e.preventDefault();
+          inner.classList.toggle('flipped');
+        }
+      });
+    });
+  </script>
 </body>
 </html>
