--- a/B1/healthB1.html
+++ b/B1/healthB1.html
@@ -1,106 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>B1 Health</title>
-  <link rel="stylesheet" href="stylesB1.css">
-  <link rel="stylesheet" href="healthB1.css">
-  
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>B1 — Health (Gesundheit) Flashcards</title>
+  <link rel="stylesheet" href="healthB1.css" />
 </head>
+
 <body>
-  <h1> B1 Health Vocabulary</h1>
-  <div class="vocab-buttons">
-    <button class="vocab-btn"> die ärztliche Untersuchung - medical examination</button>
-    <button class="vocab-btn"> die Untersuchungndlung - treatment</button>
-    <button class="vocab-btn">das Rezept - prescription</button>
-    <button class="vocab-btn">die Tablette - tablet / pill</button>
-    <button class="vocab-btn">das Medikament - medicine / drug</button>
-    <button class="vocab-btn">die Beschwerden - symptoms / complaints</button>
-    <button class="vocab-btn">die Verletzung - injury</button>
-    <button class="vocab-btn">die Operation - surgery / operation</button>
-    <button class="vocab-btn">die Krankenversicherung - health insurance</button>
-    <button class="vocab-btn">die Notaufnahme - emergency room</button>
-    <button class="vocab-btn">der Unfall - accident</button>
-    <button class="vocab-btn">die Genesung - recovery</button>
-    <button class="vocab-btn">die Ernährung - nutrition / diet</button>
-    <button class="vocab-btn">das Fieber - fever</button>
-    <button class="vocab-btn">der Blutdruck - blood pressure</button>
+  <header>
+    <h1>B1 — Gesundheit (Health) Flashcards</h1>
+    <br>
+    <p class="subtitle">Hover or click a card to flip. All vocab and sentences focus on "Health" (Gesundheit).</p>
+  </header>
+<br>
+<br>
+  <main class="card-area">
+    <section class="card-grid" aria-label="Health flashcards">
 
+      <!-- 30 flash-cards -->
+      <div class="flash-card"><div class="inner"><div class="front">der Arzt</div><div class="back">doctor (male)</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Ärztin</div><div class="back">doctor (female)</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Krankheit</div><div class="back">illness</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Medikament</div><div class="back">medicine</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Apotheke</div><div class="back">pharmacy</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Praxis</div><div class="back">medical practice</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Untersuchung</div><div class="back">examination</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Impfung</div><div class="back">vaccination</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Versicherung</div><div class="back">insurance</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Notaufnahme</div><div class="back">emergency room</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Physiotherapie</div><div class="back">physiotherapy</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Ernährung</div><div class="back">nutrition</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Bewegung</div><div class="back">exercise / movement</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Schmerz</div><div class="back">pain</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Husten</div><div class="back">cough</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Fieber</div><div class="back">fever</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Psyche</div><div class="back">mental health / psyche</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Vorsorge</div><div class="back">preventive care</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Rezept</div><div class="back">prescription</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Diät</div><div class="back">diet</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Krankenhaus</div><div class="back">hospital</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Ernährungsempfehlung</div><div class="back">nutrition recommendation</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Rehabilitation</div><div class="back">rehabilitation</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">gesund leben</div><div class="back">to live healthily</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">sich erholen</div><div class="back">to recover / rest</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">schützen</div><div class="back">to protect</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">vermeiden</div><div class="back">to avoid</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">therapie</div><div class="back">therapy</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Vorsorgeuntersuchung</div><div class="back">check-up</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Sucht</div><div class="back">addiction</div></div></div>
 
+    </section>
+<br>
+<br>
+    <section class="sentences">
+      <h2>30 Example Sentences (Using Vocabulary)</h2>
+      <br>
+<br>
+      <div class="sentence-grid">
+        <div class="sentence-card"><strong>1.</strong> Ich habe einen Termin beim <b>Arzt</b>. <span>I have an appointment with the doctor.</span></div>
+        <div class="sentence-card"><strong>2.</strong> Die <b>Gesundheit</b> ist sehr wichtig. <span>Health is very important.</span></div>
+        <div class="sentence-card"><strong>3.</strong> Er nimmt das <b>Medikament</b> dreimal täglich. <span>He takes the medicine three times a day.</span></div>
+        <div class="sentence-card"><strong>4.</strong> Ich gehe zur <b>Vorsorgeuntersuchung</b>. <span>I go to the check-up.</span></div>
+        <div class="sentence-card"><strong>5.</strong> Die <b>Apotheke</b> ist um die Ecke. <span>The pharmacy is around the corner.</span></div>
+        <div class="sentence-card"><strong>6.</strong> Die <b>Impfung</b> schützt vor Krankheiten. <span>The vaccination protects against diseases.</span></div>
+        <div class="sentence-card"><strong>7.</strong> Bei Schmerz nehme ich ein <b>Rezept</b>. <span>For pain I take a prescription.</span></div>
+        <div class="sentence-card"><strong>8.</strong> Gute <b>Ernährung</b> hält dich fit. <span>Good nutrition keeps you fit.</span></div>
+        <div class="sentence-card"><strong>9.</strong> Sport und <b>Bewegung</b> sind wichtig. <span>Sport and exercise are important.</span></div>
+        <div class="sentence-card"><strong>10.</strong> Ich war in der <b>Notaufnahme</b>. <span>I was in the emergency room.</span></div>
+        <div class="sentence-card"><strong>11.</strong> Die <b>Therapie</b> hilft bei der Rehabilitation. <span>Therapy helps in rehabilitation.</span></div>
+        <div class="sentence-card"><strong>12.</strong> Ich fühle <b>Schmerzen</b> im Rücken. <span>I feel pain in my back.</span></div>
+        <div class="sentence-card"><strong>13.</strong> Die <b>Versicherung</b> bezahlt einen Teil der Kosten. <span>The insurance pays part of the costs.</span></div>
+        <div class="sentence-card"><strong>14.</strong> Die <b>Physiotherapie</b> verbessert die Mobilität. <span>Physiotherapy improves mobility.</span></div>
+        <div class="sentence-card"><strong>15.</strong> Die <b>Ernährungsempfehlung</b> ist ausgewogen. <span>The nutrition recommendation is balanced.</span></div>
+        <div class="sentence-card"><strong>16.</strong> Nach der Operation brauche ich Zeit, um mich <b>zu erholen</b>. <span>After the operation I need time to recover.</span></div>
+        <div class="sentence-card"><strong>17.</strong> Die <b>Psyche</b> ist genauso wichtig wie der Körper. <span>Mental health is as important as the body.</span></div>
+        <div class="sentence-card"><strong>18.</strong> Wir machen eine <b>Vorsorge</b> gegen Grippe. <span>We do prevention against the flu.</span></div>
+        <div class="sentence-card"><strong>19.</strong> Die <b>Diät</b> hilft bei Gewichtsverlust. <span>The diet helps with weight loss.</span></div>
+        <div class="sentence-card"><strong>20.</strong> Im <b>Krankhaus</b> arbeiten viele Ärzte und Pfleger. <span>Many doctors and nurses work in the hospital.</span></div>
+        <div class="sentence-card"><strong>21.</strong> Ich <b>schütze</b> meine Haut vor der Sonne. <span>I protect my skin from the sun.</span></div>
+        <div class="sentence-card"><strong>22.</strong> Sucht kann das Leben verändern. <span>Addiction can change life.</span></div>
+        <div class="sentence-card"><strong>23.</strong> Die <b>Untersuchung</b> dauerte eine Stunde. <span>The examination lasted an hour.</span></div>
+        <div class="sentence-card"><strong>24.</strong> Er hat <b>Fieber</b> und einen starken <b>Husten</b>. <span>He has fever and a strong cough.</span></div>
+        <div class="sentence-card"><strong>25.</strong> Ich folge einer gesunden <b>Ernährung</b>. <span>I follow a healthy diet.</span></div>
+        <div class="sentence-card"><strong>26.</strong> Die <b>Rehabilitation</b> half ihm nach dem Unfall. <span>Rehabilitation helped him after the accident.</span></div>
+        <div class="sentence-card"><strong>27.</strong> Ich bekomme ein <b>Rezept</b> für das Medikament. <span>I get a prescription for the medicine.</span></div>
+        <div class="sentence-card"><strong>28.</strong> Kinder brauchen regelmäßige <b>Impfungen</b>. <span>Children need regular vaccinations.</span></div>
+        <div class="sentence-card"><strong>29.</strong> Regelmäßige Bewegung verbessert die <b>Gesundheit</b>. <span>Regular exercise improves health.</span></div>
+        <div class="sentence-card"><strong>30.</strong> Ich gehe zur <b>Vorsorgeuntersuchung</b> jedes Jahr. <span>I go to the check-up every year.</span></div>
+      </div>
+    </section>
+<br>
+<br>
+    <section class="story">
+      <h2>Short Story — "Gesund leben"</h2>
+      <br>
+<br>
+      <article>
+        <p>Ich möchte <strong>gesund leben</strong>. Deshalb esse ich Obst, Gemüse und treibe <strong>Bewegung</strong>.</p>
+        <p>Letzte Woche hatte ich einen Termin beim <strong>Arzt</strong> zur <strong>Vorsorgeuntersuchung</strong>. Die Untersuchung war gründlich.</p>
+        <p>Der Arzt gab mir einen Rat zur <strong>Ernährung</strong> und verschrieb ein <strong>Medikament</strong> gegen meine Schmerzen.</p>
+        <p>Ich mache jetzt Physiotherapie und achte auf meine <strong>Psyche</strong>, damit ich mich vollständig <strong>erhole</strong>.</p>
+        <p>Gesundheit ist Arbeit — aber es lohnt sich, für ein gutes Leben zu sorgen.</p>
+      </article>
+    </section>
+  </main>
 
-  </div>
-
-
-  <h3>B1 Health Sentences</h3>
-  <div class="sentence-list">
-
-    <div class="sentence-card">Ich habe morgen eine Untersuchung beim Hausarzt.
-<br><span>I have a medical check-up with my family doctor tomorrow.
-</span></div>
-
-    <div class="sentence-card">Die Behandlung dauert ungefähr zwei Wochen.
-<br><span>The treatment takes about two weeks.
-</span></div>
-
-    <div class="sentence-card">Der Arzt hat mir ein Rezept für Antibiotika gegeben.
-<br><span>The doctor gave me a prescription for antibiotics.
-</span></div>
-
-    <div class="sentence-card">Sie muss die Tablette zweimal täglich einnehmen.
-<br><span>She has to take the pill twice a day.
-</span></div>
-
-    <div class="sentence-card">Dieses Medikament hilft gegen Kopfschmerzen.
-<br><span>This medicine helps with headaches.
-</span></div>
-
-    <div class="sentence-card">Meine Beschwerden sind seit gestern schlimmer geworden.
-<br><span>My symptoms have gotten worse since </span></div>
-
-    <div class="sentence-card">Nach dem Unfall hatte er eine schwere Verletzung am Bein.
-<br><span>After the accident, he had a serious injury on his leg.
-</span></div>
-
-    <div class="sentence-card">Die Operation war erfolgreich und der Patient fühlt sich besser.
-<br><span>The surgery was successful and the patient feels better.
-</span></div>
-    
-    <div class="sentence-card">In Deutschland ist die Krankenversicherung sehr wichtig.
-<br><span>In Germany, health insurance is very important.
-</span></div>
-
-    <div class="sentence-card">Der Patient wurde sofort in die Notaufnahme gebracht.
-<br><span>The patient was immediately taken to the emergency room.
-</span></div>
-
-    <div class="sentence-card">Nach dem Unfall musste er zwei Wochen im Krankenhaus bleiben.
-<br><span>After the accident, he had to stay in the hospital for two weeks.
-</span></div>
-  
-
-    <div class="sentence-card">Ihre Genesung verläuft schneller als erwartet.
-<br><span>Her recovery is going faster than expected.
-</span></div>
-
-
-    <div class="sentence-card">Eine gesunde Ernährung ist wichtig für den Körper.
-<br><span>A healthy diet is important for the body.
-</span></div>
- 
-
-    <div class="sentence-card">Der Arzt hat mein Fieber gemessen, es war 38,5 Grad.
-<br><span>The doctor measured my fever, it was 38.5 degrees.
-</span></div>
-  
-
-    <div class="sentence-card">Mein Blutdruck ist heute etwas zu hoch.
-<br><span>My blood pressure is a little too high today.
-</span></div>
-
-  </div>
-
- 
-  
-  
+  <script>
+    document.querySelectorAll('.flash-card').forEach(card => {
+      const inner = card.querySelector('.inner');
+      card.addEventListener('click', () => inner.classList.toggle('flipped'));
+      card.addEventListener('keydown', e => {
+        if (e.key === 'Enter' || e.key === ' ') {
+          e.preventDefault();
+          inner.classList.toggle('flipped');
+        }
+      });
+    });
+  </script>
 </body>
 </html>
