--- a/B1/indexB1.html
+++ b/B1/indexB1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>B1 - Deutschio</title>
   <link rel="stylesheet" href="stylesB1.css">
-  <link rel="stylesheet" href="healthB1.css">
+  <!-- <link rel="stylesheet" href="healthB1.css"> -->
 
 </head>
 <body>
