--- a/B2/scienceB2.html
+++ b/B2/scienceB2.html
@@ -1,120 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>B2 - Science</title>
-  <link rel="stylesheet" href="stylesB2.css">
-  <link rel="stylesheet" href="scienceB2.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>B2 — Science (Wissenschaft) Flashcards</title>
+  <link rel="stylesheet" href="scienceB2.css" />
 </head>
+
 <body>
-  <h1>B2 - Science Vocabulary</h1>
-  <div class="vocab-buttons">
-   
-    <button class="vocab-btn">die Wissenschaft – science</button>
-    <button class="vocab-btn">der Forscher – researcher</button>
-    <button class="vocab-btn">die Forschung – research</button>
-    <button class="vocab-btn">das Experiment – experiment</button>
-    <button class="vocab-btn">die Theorie – theory</button>
-    <button class="vocab-btn">die Methode – method</button>
-    <button class="vocab-btn">das Labor – laboratory</button>
-    <button class="vocab-btn">die Entdeckung – discovery</button>
-    <button class="vocab-btn">die Innovation – innovation</button>
-    <button class="vocab-btn">die Technologie – technology</button>
+  <header>
+    <h1>B2 — Wissenschaft (Science) Flashcards</h1>
+    <p class="subtitle">Hover or click a card to flip. Learn vocabulary and sentences about “Science”.</p>
+  </header>
 
-    
-    <button class="vocab-btn">die Analyse – analysis</button>
-    <button class="vocab-btn">die Daten – data</button>
-    <button class="vocab-btn">die Hypothese – hypothesis</button>
-    <button class="vocab-btn">die Evidenz – evidence</button>
-    <button class="vocab-btn">die Chemie – chemistry</button>
-    <button class="vocab-btn">die Physik – physics</button>
-    <button class="vocab-btn">die Biologie – biology</button>
-    <button class="vocab-btn">die Genetik – genetics</button>
-    <button class="vocab-btn">die Astronomie – astronomy</button>
-    <button class="vocab-btn">die Umweltwissenschaft – environmental science</button>
-    <button class="vocab-btn">die Medizin – medicine</button>
-    <button class="vocab-btn">die Künstliche Intelligenz – artificial intelligence</button>
-    <button class="vocab-btn">die Robotik – robotics</button>
-    <button class="vocab-btn">die Nanotechnologie – nanotechnology</button>
-    <button class="vocab-btn">die Quantenphysik – quantum physics</button>
-  </div>
+  <main class="card-area">
+    <section class="card-grid" aria-label="Science flashcards">
+      <div class="flash-card"><div class="inner"><div class="front">die Wissenschaft</div><div class="back">science</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Forscher</div><div class="back">researcher</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Experiment</div><div class="back">experiment</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Forschung</div><div class="back">research</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Theorie</div><div class="back">theory</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Labor</div><div class="back">laboratory</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Entdeckung</div><div class="back">discovery</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Ergebnis</div><div class="back">result</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Analyse</div><div class="back">analysis</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Chemie</div><div class="back">chemistry</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Physik</div><div class="back">physics</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Biologie</div><div class="back">biology</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Technologie</div><div class="back">technology</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Innovation</div><div class="back">innovation</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Versuch</div><div class="back">attempt / trial</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Hypothese</div><div class="back">hypothesis</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Wissenschaftlerin</div><div class="back">female scientist</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Beobachtung</div><div class="back">observation</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Daten</div><div class="back">data</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Erkenntnis</div><div class="back">insight</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Universum</div><div class="back">universe</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">der Planet</div><div class="back">planet</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">das Element</div><div class="back">element</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Energie</div><div class="back">energy</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Materie</div><div class="back">matter</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Atome</div><div class="back">atoms</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Wissenschaftsgemeinschaft</div><div class="back">scientific community</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Anwendung</div><div class="back">application</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Entstehung</div><div class="back">origin</div></div></div>
+      <div class="flash-card"><div class="inner"><div class="front">die Zukunft</div><div class="back">future</div></div></div>
+    </section>
 
-  <h3>B2 - Science Sentences</h3>
-  <div class="sentence-list">
-  
-    <div class="sentence-card">Die Wissenschaft entwickelt sich ständig weiter.  
-      <br><span>Science is constantly evolving.</span></div>
+    <section class="sentences">
+      <h2>30 Example Sentences (Using Vocabulary)</h2>
+      <div class="sentence-grid">
+        <div class="sentence-card"><strong>1.</strong> Die <b>Wissenschaft</b> verändert die Welt. <span>Science changes the world.</span></div>
+        <div class="sentence-card"><strong>2.</strong> Der <b>Forscher</b> arbeitet im <b>Labor</b>. <span>The researcher works in the laboratory.</span></div>
+        <div class="sentence-card"><strong>3.</strong> Das <b>Experiment</b> war erfolgreich. <span>The experiment was successful.</span></div>
+        <div class="sentence-card"><strong>4.</strong> Seine <b>Theorie</b> erklärt das <b>Universum</b>. <span>His theory explains the universe.</span></div>
+        <div class="sentence-card"><strong>5.</strong> Die <b>Entdeckung</b> war revolutionär. <span>The discovery was revolutionary.</span></div>
+        <div class="sentence-card"><strong>6.</strong> <b>Analyse</b> der <b>Daten</b> ist entscheidend. <span>Analysis of the data is crucial.</span></div>
+        <div class="sentence-card"><strong>7.</strong> Die <b>Chemie</b> untersucht Stoffe. <span>Chemistry studies substances.</span></div>
+        <div class="sentence-card"><strong>8.</strong> In der <b>Biologie</b> geht es um das Leben. <span>Biology deals with life.</span></div>
+        <div class="sentence-card"><strong>9.</strong> Die <b>Physik</b> beschreibt Naturgesetze. <span>Physics describes natural laws.</span></div>
+        <div class="sentence-card"><strong>10.</strong> <b>Technologie</b> basiert auf <b>Wissenschaft</b>. <span>Technology is based on science.</span></div>
+        <div class="sentence-card"><strong>11.</strong> Neue <b>Innovation</b> treibt Fortschritt an. <span>New innovation drives progress.</span></div>
+        <div class="sentence-card"><strong>12.</strong> Eine gute <b>Hypothese</b> muss testbar sein. <span>A good hypothesis must be testable.</span></div>
+        <div class="sentence-card"><strong>13.</strong> Die <b>Beobachtung</b> führte zur <b>Erkenntnis</b>. <span>The observation led to insight.</span></div>
+        <div class="sentence-card"><strong>14.</strong> Die <b>Wissenschaftlerin</b> gewann einen Preis. <span>The female scientist won a prize.</span></div>
+        <div class="sentence-card"><strong>15.</strong> <b>Ergebnisse</b> werden veröffentlicht. <span>Results are published.</span></div>
+        <div class="sentence-card"><strong>16.</strong> <b>Daten</b> werden gesammelt und <b>analysiert</b>. <span>Data is collected and analyzed.</span></div>
+        <div class="sentence-card"><strong>17.</strong> Die <b>Energie</b> der Sonne ist enorm. <span>The energy of the sun is immense.</span></div>
+        <div class="sentence-card"><strong>18.</strong> <b>Materie</b> besteht aus <b>Atomen</b>. <span>Matter is made of atoms.</span></div>
+        <div class="sentence-card"><strong>19.</strong> Die <b>Wissenschaftsgemeinschaft</b> arbeitet zusammen. <span>The scientific community works together.</span></div>
+        <div class="sentence-card"><strong>20.</strong> Jede <b>Anwendung</b> hat eine Grundlage. <span>Every application has a foundation.</span></div>
+        <div class="sentence-card"><strong>21.</strong> Die <b>Entstehung</b> des Lebens ist ein Rätsel. <span>The origin of life is a mystery.</span></div>
+        <div class="sentence-card"><strong>22.</strong> Der <b>Planet</b> Erde ist einzigartig. <span>The planet Earth is unique.</span></div>
+        <div class="sentence-card"><strong>23.</strong> <b>Elemente</b> bilden Stoffe. <span>Elements form substances.</span></div>
+        <div class="sentence-card"><strong>24.</strong> Forschung prägt die <b>Zukunft</b>. <span>Research shapes the future.</span></div>
+        <div class="sentence-card"><strong>25.</strong> Wissenschaft braucht <b>Neugier</b>. <span>Science requires curiosity.</span></div>
+        <div class="sentence-card"><strong>26.</strong> <b>Erkenntnisse</b> führen zu neuen <b>Fragen</b>. <span>Insights lead to new questions.</span></div>
+        <div class="sentence-card"><strong>27.</strong> <b>Technologie</b> verändert den Alltag. <span>Technology changes everyday life.</span></div>
+        <div class="sentence-card"><strong>28.</strong> Die <b>Forschung</b> wurde international anerkannt. <span>The research was internationally recognized.</span></div>
+        <div class="sentence-card"><strong>29.</strong> <b>Forscher</b> arbeiten oft in Teams. <span>Researchers often work in teams.</span></div>
+        <div class="sentence-card"><strong>30.</strong> <b>Wissenschaft</b> fördert Fortschritt und Frieden. <span>Science promotes progress and peace.</span></div>
+      </div>
+    </section>
 
-    <div class="sentence-card">Forscher arbeiten an neuen Medikamenten gegen Krebs.  
-      <br><span>Researchers are working on new medicines against cancer.</span></div>
+    <section class="story">
+      <h2>Short Story — “Die junge Forscherin”</h2>
+      <article>
+        <p>Lisa war schon als Kind neugierig. Sie liebte es, <strong>Experimente</strong> zu machen und Dinge zu <strong>beobachten</strong>.</p>
+        <p>Heute arbeitet sie in einem <strong>Labor</strong>. Ihre <strong>Forschung</strong> über erneuerbare <strong>Energie</strong> wurde weltweit bekannt.</p>
+        <p>Ihre <strong>Entdeckung</strong> zeigt, dass <strong>Wissenschaft</strong> Hoffnung für die <strong>Zukunft</strong> bringt.</p>
+      </article>
+    </section>
+  </main>
 
-    <div class="sentence-card">Die Forschung wird oft vom Staat finanziert.  
-      <br><span>Research is often funded by the state.</span></div>
-
-    <div class="sentence-card">Im Labor wurde ein spannendes Experiment durchgeführt.  
-      <br><span>An exciting experiment was carried out in the laboratory.</span></div>
-
-    <div class="sentence-card">Die Theorie erklärt, warum sich Sterne bewegen.  
-      <br><span>The theory explains why stars move.</span></div>
-
-    <div class="sentence-card">Die Methode muss präzise dokumentiert werden.  
-      <br><span>The method must be documented precisely.</span></div>
-
-    <div class="sentence-card">Die Entdeckung neuer Planeten begeistert viele Menschen.  
-      <br><span>The discovery of new planets excites many people.</span></div>
-
-    <div class="sentence-card">Innovation ist der Motor des wissenschaftlichen Fortschritts.  
-      <br><span>Innovation is the engine of scientific progress.</span></div>
-
-    <div class="sentence-card">Technologie erleichtert die wissenschaftliche Arbeit erheblich.  
-      <br><span>Technology facilitates scientific work considerably.</span></div>
-
-    <div class="sentence-card">Das Labor verfügt über moderne Geräte.  
-      <br><span>The laboratory has modern equipment.</span></div>
-
-    
-    <div class="sentence-card">Die Analyse der Daten dauert mehrere Wochen.  
-      <br><span>The analysis of the data takes several weeks.</span></div>
-
-    <div class="sentence-card">Wissenschaftler sammeln Daten aus verschiedenen Quellen.  
-      <br><span>Scientists collect data from various sources.</span></div>
-
-    <div class="sentence-card">Die Hypothese muss durch Experimente überprüft werden.  
-      <br><span>The hypothesis must be tested through experiments.</span></div>
-
-    <div class="sentence-card">Evidenz spielt eine zentrale Rolle in der Wissenschaft.  
-      <br><span>Evidence plays a central role in science.</span></div>
-
-    <div class="sentence-card">Chemie erklärt die Struktur und Reaktionen von Stoffen.  
-      <br><span>Chemistry explains the structure and reactions of substances.</span></div>
-
-    <div class="sentence-card">Physik beschäftigt sich mit Kräften und Energie.  
-      <br><span>Physics deals with forces and energy.</span></div>
-
-    <div class="sentence-card">Die Biologie untersucht Pflanzen und Tiere.  
-      <br><span>Biology studies plants and animals.</span></div>
-
-    <div class="sentence-card">Die Genetik hilft beim Verständnis von Krankheiten.  
-      <br><span>Genetics helps in understanding diseases.</span></div>
-
-    <div class="sentence-card">Astronomie erforscht Sterne, Planeten und Galaxien.  
-      <br><span>Astronomy explores stars, planets, and galaxies.</span></div>
-
-    <div class="sentence-card">Die Umweltwissenschaft untersucht den Klimawandel.  
-      <br><span>Environmental science studies climate change.</span></div>
-
-    <div class="sentence-card">Die Medizin hat in den letzten Jahren enorme Fortschritte gemacht.  
-      <br><span>Medicine has made enormous progress in recent years.</span></div>
-
-    <div class="sentence-card">Künstliche Intelligenz wird in der Forschung immer wichtiger.  
-      <br><span>Artificial intelligence is becoming increasingly important in research.</span></div>
-
-    <div class="sentence-card">Die Robotik revolutioniert die Industrie.  
-      <br><span>Robotics is revolutionizing industry.</span></div>
-
-
-    <div class="sentence-card">Quantenphysik stellt viele klassische Theorien infrage.  
-      <br><span>Quantum physics challenges many classical theories.</span></div>
-  </div>
+  <script>
+    document.querySelectorAll('.flash-card').forEach(card => {
+      const inner = card.querySelector('.inner');
+      card.addEventListener('click', () => inner.classList.toggle('flipped'));
+      card.addEventListener('keydown', e => {
+        if (e.key === 'Enter' || e.key === ' ') {
+          e.preventDefault();
+          inner.classList.toggle('flipped');
+        }
+      });
+    });
+  </script>
 </body>
 </html>
