--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <div class="nav-links" id="menu">
     <a href="profile.html" id="profileLink" class="nav-link">Profile</a>
     <a href="login.html" class="nav-link">Login</a>
+    <a href="about.html" class="nav-link">About </a>
   </div>
 </nav>
 
