--- a/about.html
+++ b/about.html
@@ -196,8 +196,8 @@
     </div>
 
      <div class="solution-card">
-      <h3> Games & ChatBotAI</h3>
-      <p>Integrated games and a ChatBot AI to provide a fun and interactive way for learners to practice vocabulary and communication.</p>
+      <h3> Games </h3>
+      <p>Integrated games to provide a fun and interactive way for learners to practice vocabulary and communication.</p>
     </div>
   </section>
 
