--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       
     }
     header h1 {
-      font-size: 3em;
+      font-size: 50px;
       margin-bottom: 10px;
       animation: slideIn 1s ease-out forwards;
       opacity: 0;
@@ -159,7 +159,7 @@
 <body>
 
   <header>
-    <h1>About the Founder</h1>
+    <h1>About the Founder <br> of Deustchio</h1>
   </header>
 
   <section class="about">
