--- a/profile.html
+++ b/profile.html
@@ -3,49 +3,48 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Profile — Deutschio</title>
+  <title>Profile - Deutschio</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="profile-page">
-    <div class="profile-card">
-      <div class="profile-top">
-        <div class="avatar-wrap">
-          <img id="avatarImg" class="avatar" src="" alt="avatar">
-          <label for="avatarInput" class="visually-hidden">Upload avatar</label>
-          <input id="avatarInput" type="file" accept="image/*" class="hidden" title="Upload avatar" />
-          <button id="changeAvatarBtn" class="btn ghost small">Change Photo</button>
-        </div>
-        <div class="profile-info">
-          <h2 id="profileName">User</h2>
-          <div class="profile-actions">
-            <button id="logoutBtn" class="btn ghost">Logout</button>
-            <button id="deleteAccountBtn" class="btn danger">Delete Account</button>
-          </div>
-        </div>
+
+<div class="profile-page">
+  <div class="profile-card">
+    <div class="profile-top">
+      <div class="avatar-wrap">
+        <img id="avatarImg" class="avatar" src="" alt="avatar">
+        <label for="avatarInput" class="visually-hidden">Upload avatar</label>
+        <input id="avatarInput" type="file" accept="image/*" class="hidden" title="Upload avatar" />
+        <button id="changeAvatarBtn" class="btn ghost small">Change Photo</button>
       </div>
-
-      <hr>
-
-      <div class="note-section">
-        <h3>Write a short note in German today</h3>
-        <textarea id="noteInput" class="note-input" placeholder="Schreibe heute einen kurzen Satz auf Deutsch..."></textarea>
-        <div class="note-actions">
-          <button id="saveNoteBtn" class="btn primary">Save Note</button>
-          <button id="clearNoteBtn" class="btn ghost">Clear</button>
+      <div class="profile-info">
+        <h2 id="profileName">User</h2>
+        <div class="profile-actions">
+          <button id="logoutBtn" class="btn ghost">Logout</button>
+          <button id="deleteAccountBtn" class="btn danger">Delete Account</button>
         </div>
-
-        <h4>Your previous notes</h4>
-        <div id="notesList" class="notes-list"></div>
       </div>
     </div>
+
+    <hr>
+
+    <div class="note-section">
+      <h3>Write a short note in German today</h3>
+      <textarea id="noteInput" class="note-input" placeholder="Schreibe heute einen kurzen Satz auf Deutsch..."></textarea>
+      <div class="note-actions">
+        <button id="saveNoteBtn" class="btn primary">Save Note</button>
+        <button id="clearNoteBtn" class="btn ghost">Clear</button>
+      </div>
+
+      <h4>Your previous notes</h4>
+      <div id="notesList" class="notes-list"></div>
+    </div>
   </div>
+</div>
 
-
-
-<!-- 🎮 German Games Section -->
+<!--  German Games Section -->
 <div class="games-section">
-  <h2>🎮 Practice Games</h2>
+  <h2> Practice Games</h2>
 
   <!-- Typing Challenge -->
   <div id="typing-game" class="game-box">
@@ -53,36 +52,32 @@
     <p>Translate the German word before time runs out!</p>
     <div id="typing-word"></div>
     <input type="text" id="typing-input" placeholder="Type translation..." />
-    <br>
-    <br>
+    <br><br>
     <button onclick="startTypingGame()">Start Game</button>
     <p id="typing-score"></p>
   </div>
 
   <!-- Hangman -->
   <div id="hangman-game" class="game-box">
-    <h3>🪢 Hangman (Das Galgenmännchen)</h3>
+    <h3>Hangman (Das Galgenmännchen)</h3>
     <p>Guess the German word!</p>
     <div id="hangman-word"></div>
     <div id="hangman-letters"></div>
     <p id="hangman-status"></p>
     <br>
     <button onclick="startHangman()">New Game</button>
-  </div>
+  </div>
 </div>
-
-
-
 
 <!-- Random Word of the Day -->
 <section class="word-of-day">
-  <h2> Word of the Day</h2>
+  <h2>Word of the Day</h2>
   <div id="wordBox" class="word-box"></div>
 </section>
 
-
+<!-- Drag & Drop Game -->
 <section class="drag-drop-game">
-  <h2> Match the Words</h2>
+  <h2>Match the Words</h2>
   <p>Drag the German word to its English meaning</p>
   <div class="game-container">
     <div class="words">
@@ -97,36 +92,25 @@
       <div class="draggable" draggable="true" data-translate="moon">Mond</div>
     </div>
     <div class="targets">
-      <div class="dropzone" data-word="moon"> Moon</div>
-      <div class="dropzone" data-word="cat"> Cat</div>
-      <div class="dropzone" data-word="water"> Water</div>
+      <div class="dropzone" data-word="moon">Moon</div>
+      <div class="dropzone" data-word="cat">Cat</div>
+      <div class="dropzone" data-word="water">Water</div>
       <div class="dropzone" data-word="house">House</div>
-      <div class="dropzone" data-word="sun"> Sun</div>
-      <div class="dropzone" data-word="bread"> Bread</div>
-      <div class="dropzone" data-word="book"> Book </div>
-      <div class="dropzone" data-word="dog"> Dog </div>
-      <div class="dropzone" data-word="apple"> Apple</div>
+      <div class="dropzone" data-word="sun">Sun</div>
+      <div class="dropzone" data-word="bread">Bread</div>
+      <div class="dropzone" data-word="book">Book</div>
+      <div class="dropzone" data-word="dog">Dog</div>
+      <div class="dropzone" data-word="apple">Apple</div>
     </div>
   </div>
   <p id="gameMessage" class="game-message"></p>
-
-
-  
-
 </section>
 
+<footer>   
+  <p>&copy; DEUTSCHIO | All rights reserved.</p>
+</footer>
 
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-         <footer>   
-    <p>&copy; DEUTSCHIO | All rights reserved.</p>
- 
-  </footer>
-  <br>
-
-  <script src="profile.js"></script>
+<script src="config.js"></script>
+<script src="profile.js"></script>
 </body>
 </html>
